k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rock-paper-science-ui-service
  namespace: rock-paper-science
spec:
  selector:
    app: rock-paper-science-ui-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
