k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rock-paper-science-ui-route
  namespace: rock-paper-science
spec:
  to:
    kind: Service
    name: rock-paper-science-ui-service
  port:
    targetPort: 80
  tls:
    termination: edge
